unpackaged/main/default/objects/Return_Merchandise_Authorization__c/Return_Merchandise_Authorization__c.object-meta.xml
<CustomObject>
    <label>Return Merchandise Authorization</label>
    <nameField>
        <displayFormat>RMA-{00000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Merchandise Authorization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>