unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Merchandise Authorization</relationshipLabel>
    <relationshipName>Return_Merchandise_Authorization</relationshipName>
    <type>Lookup</type>
</CustomField>