unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/AvaTax_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>AvaTax_Company_Code__c</fullName>
    <formula>Account__r.AvaTax_Company_Code__r.AVA_SFCLOUD__Avatax_Company_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvaTax Company Code</label>
    <type>Text</type>
</CustomField>