unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <label>Credit Memo #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>