unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <formula>Related_Invoice__r.varcpq__Sales_Order__r.Origin_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin City</label>
    <type>Text</type>
</CustomField>