unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <formula>Related_Invoice__r.varcpq__Sales_Order__r.Origin_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Country</label>
    <type>Text</type>
</CustomField>