unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Origin_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Postal_Code__c</fullName>
    <formula>Related_Invoice__r.varcpq__Sales_Order__r.Origin_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Postal Code</label>
    <type>Text</type>
</CustomField>