unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Origin_Street__c.field-meta.xml
<CustomField>
    <fullName>Origin_Street__c</fullName>
    <formula>Related_Invoice__r.varcpq__Sales_Order__r.Origin_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Street</label>
    <type>Text</type>
</CustomField>