unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Return_Merchandise_Authorization1</relationshipName>
    <type>Lookup</type>
</CustomField>