unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost/Damaged</fullName>
            </value>
            <value>
                <fullName>Wrong Item</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Short Ship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>