unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Invoice</label>
    <referenceTo>varcpq__Invoice__c</referenceTo>
    <relationshipLabel>Return Merchandise Authorization</relationshipLabel>
    <relationshipName>Return_Merchandise_Authorization</relationshipName>
    <type>Lookup</type>
</CustomField>