unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Related_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Purchase Order</label>
    <referenceTo>varcpq__Purchase_Order__c</referenceTo>
    <relationshipLabel>Return Merchandise Authorization</relationshipLabel>
    <relationshipName>Return_Merchandise_Authorization</relationshipName>
    <type>Lookup</type>
</CustomField>