unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Restocking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee__c</fullName>
    <label>Restocking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>