unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/RMA_Type__c.field-meta.xml
<CustomField>
    <fullName>RMA_Type__c</fullName>
    <label>RMA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Return</fullName>
            </value>
            <value>
                <fullName>Damaged/Missing Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>