unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Ship_to_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_City__c</fullName>
    <label>Ship to City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>