unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Ship_To_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zipcode__c</fullName>
    <label>Ship To Zipcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>