unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Shipping_Refund__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Refund__c</fullName>
    <label>Shipping Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>