unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Merchandise Authorization (Supplier)</relationshipLabel>
    <relationshipName>Return_Merchandise_Authorization1</relationshipName>
    <type>Lookup</type>
</CustomField>