unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Tax_Amount_GST__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_GST__c</fullName>
    <label>Tax Amount GST</label>
    <summarizedField>Return_Merchandise_Authorization_Line_It__c.Tax_Amount_GST__c</summarizedField>
    <summaryForeignKey>Return_Merchandise_Authorization_Line_It__c.Return_Merchandise_Authorization__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>