unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <label>Tax Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>