unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <summarizedField>Return_Merchandise_Authorization_Line_It__c.Tax_Rate__c</summarizedField>
    <summaryForeignKey>Return_Merchandise_Authorization_Line_It__c.Return_Merchandise_Authorization__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>