unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>