unpackaged/main/default/objects/Return_Merchandise_Authorization__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Return_Merchandise_Authorization_Line_It__c.Total_Ext_Price__c</summarizedField>
    <summaryForeignKey>Return_Merchandise_Authorization_Line_It__c.Return_Merchandise_Authorization__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>