unpackaged/main/default/objects/Return_Merchandise_Authorization__c/validationRules/Restocking_Fee_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Restocking_Fee_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Restocking_Fee__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Restocking_Fee__c</errorDisplayField>
    <errorMessage>Restocking Fee can not be a negative value</errorMessage>
</ValidationRule>