unpackaged/main/default/objects/Return_Merchandise_Authorization__c/validationRules/Shipping_Refund_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Refund_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Shipping_Refund__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Shipping_Refund__c</errorDisplayField>
    <errorMessage>Shipping Refund can not be a negative value</errorMessage>
</ValidationRule>