unpackaged/main/default/objects/Return_Merchandise_Authorization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Supplier__c</columns>
    <columns>Related_Sales_Order__c</columns>
    <columns>Related_Purchase_Order__c</columns>
    <columns>Related_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>